[tool.poetry]
name = "robotpy-toolkit-7407"
version = "2024.1.1.3"
description = "FRC Wired Boars Team 7407's Toolkit for usage with RobotPy"
authors = ["Sidharth Rao <sidharthmrao@gmail.com>", "Ethan Chapman <ethan.chapman0@outlook.com>"]

[tool.poetry.dependencies]
python=">=3.9,<=3.13"
robotpy-rev = ">=2023.1.1"
robotpy-ctre = ">=2024.1.0"
robotpy-apriltag = ">=2023.1.1.0"
pynetworktables = ">=2021.0.0"
m2r2 = ">=0.3.3"
robotpy-commands-v2 = "=2024.0.0b4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
